[1.4.1]
- API Addition: added collides method tho RaycastCollisionDetector.

[1.4.0]
- API Addition: added behaviors trees (thanks implicit-invocation), see https://github.com/libgdx/gdx-ai/wiki/Behavior-Trees
- API Addition: added steering behaviors, see https://github.com/libgdx/gdx-ai/wiki/Steering-Behaviors
- API Addition: added support for telegram providers, see https://github.com/libgdx/gdx-ai/wiki/Message-Handling#telegram-providers
- API Change: MessageDispatcher's dispatchDelayedMessages renamed to update which now takes deltaTime as input to properly support game pause; removed time granularity.
- API Change: renamed Agent to Telegraph and moved it to msg package. Also, removed the update method.
- API Addition: now StateMachine implements Telegraph.