@@ -19,6 +19,7 @@ package com.badlogic.gdx.ai.tests.steer.box2d;
 import com.badlogic.gdx.ai.steer.utils.Collision;
 import com.badlogic.gdx.ai.steer.utils.Ray;
 import com.badlogic.gdx.ai.steer.utils.RaycastCollisionDetector;
+import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.math.Vector2;
 import com.badlogic.gdx.physics.box2d.Fixture;
 import com.badlogic.gdx.physics.box2d.RayCastCallback;
@@ -31,7 +32,6 @@ public class Box2dRaycastCollisionDetector implements RaycastCollisionDetector<V
 
 	World world;
 	Box2dRaycastCallback callback;
-	Vector2 inputRayEndPoint;
 
 	public Box2dRaycastCollisionDetector (World world) {
 		this(world, new Box2dRaycastCallback());
@@ -40,7 +40,6 @@ public class Box2dRaycastCollisionDetector implements RaycastCollisionDetector<V
 	public Box2dRaycastCollisionDetector (World world, Box2dRaycastCallback callback) {
 		this.world = world;
 		this.callback = callback;
-		this.inputRayEndPoint = new Vector2();
 	}
 
 	@Override
@@ -51,10 +50,9 @@ public class Box2dRaycastCollisionDetector implements RaycastCollisionDetector<V
 	@Override
 	public boolean findCollision (Collision<Vector2> outputCollision, Ray<Vector2> inputRay) {
 		callback.collided = false;
-		if (!inputRay.direction.isZero()) {
-			inputRayEndPoint.set(inputRay.origin).add(inputRay.direction);
+		if (!inputRay.start.epsilonEquals(inputRay.end, MathUtils.FLOAT_ROUNDING_ERROR)) {
 			callback.outputCollision = outputCollision;
-			world.rayCast(callback, inputRay.origin, inputRayEndPoint);
+			world.rayCast(callback, inputRay.start, inputRay.end);
 		}
 		return callback.collided;
 	}
